Fix alignment of icon in Notice

--- a/src/amo/components/Notice/styles.scss
+++ b/src/amo/components/Notice/styles.scss
@@ -23,6 +23,7 @@
 }
 
 .Notice-icon {
+  align-self: center;
   background-position: center top;
   background-repeat: no-repeat;
 }
